Added display images to projects in projects section and updated readme file

--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                 <div class="swiper-wrapper">
                     <!--======================== PORTFOLIO 1 =============-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio1.jpg" alt="" class="portfolio__img">
+                        <img src="./assets/img/Hnet.com-image.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Password and Document Wallet</h3>
@@ -606,7 +606,7 @@
 
                     <!--======================== PORTFOLIO 2 =============-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio2.jpg" alt="" class="portfolio__img">
+                        <img src="./assets/img/Chatbot.jpeg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">CLI ChatBot Natasha</h3>
@@ -614,7 +614,7 @@
                                 A Comman Line ChatBot made as a Second year project using Java
                             </p>
                             <a href="#" class="button button--flex button--small portfolio__button">
-                                Demo
+                                Github
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
@@ -622,7 +622,7 @@
 
                     <!--======================== PORTFOLIO 3 =============-->
                     <div class="portfolio__content grid swiper-slide">
-                        <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+                        <img src="./assets/img/Pay.jpg" alt="" class="portfolio__img">
 
                         <div class="portfolio__data">
                             <h3 class="portfolio__title">Payroll Management System</h3>
@@ -630,7 +630,7 @@
                                 A second year C# project for Payroll Management
                             </p>
                             <a href="#" class="button button--flex button--small portfolio__button">
-                                Demo
+                                Github
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
                         </div>
