Added my first certificate of Internet Fundamentals in certificate section

--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                 <div class="swiper-wrapper">
                     <!--======================== CERTIFICATE 1 =============-->
                     <div class="grid swiper-slide">
-                        <img src="./assets/img/Cert.jpeg" alt="" class="cert__img">
+                        <img src="./assets/img/Internet Fundamentals Certificate.jpg" alt="" class="cert__img">
                     </div>
 
                     <!--======================== CERTIFICATE 2 =============-->
